# pr-insights

./: .coverage  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pr_insights/: __init__.py  __main__.py  analyzer.py  cli.py  github_client.py  models.py
tests/: test_analyzer.py  test_cli.py  test_github_client.py  test_models.py
